Fix blog page mobile spacing

--- a/styles/breakpoints/_blog-breakpoints.scss
+++ b/styles/breakpoints/_blog-breakpoints.scss
@@ -138,10 +138,11 @@
          }
         }
         .single{
-            margin-bottom: 0px;
+            margin-bottom: 20px;
             .inner-blog{
                 flex-direction: row;
                 .blog-content{
+                    margin-bottom: 0px;
                     margin:0;
                     height: 100%;
                     padding-top: 20px;
@@ -159,7 +160,7 @@
         }
         .blog-post{
             width: 100%;
-            height: 100vh;
+            height: 90vh;
             .inner-blog{
                 flex-direction: column-reverse;
                 align-items: center;
@@ -205,7 +206,7 @@
             flex-direction: column;
         }
         .single{
-            margin-bottom: 0px;
+            margin-bottom: 20px;
             .inner-blog{
                 flex-direction: column;
                 .blog-content{
