--- a/styles/pages/blog.css
+++ b/styles/pages/blog.css
@@ -133,12 +133,13 @@ body, form, fieldset, ol, ul, li, h1, h2, h3, h4, h5, h6, p {
     height: 40%;
   }
   body .single {
-    margin-bottom: 0px;
+    margin-bottom: 20px;
   }
   body .single .inner-blog {
     flex-direction: row;
   }
   body .single .inner-blog .blog-content {
+    margin-bottom: 0px;
     margin: 0;
     height: 100%;
     padding-top: 20px;
@@ -151,7 +152,7 @@ body, form, fieldset, ol, ul, li, h1, h2, h3, h4, h5, h6, p {
   }
   body .blog-post {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
   }
   body .blog-post .inner-blog {
     flex-direction: column-reverse;
@@ -197,7 +198,7 @@ body, form, fieldset, ol, ul, li, h1, h2, h3, h4, h5, h6, p {
     flex-direction: column;
   }
   body .single {
-    margin-bottom: 0px;
+    margin-bottom: 20px;
   }
   body .single .inner-blog {
     flex-direction: column;
